--- a/animeflix/requirements.txt
+++ b/animeflix/requirements.txt
@@ -4,10 +4,12 @@ botocore==1.23.26
 Django==4.0
 django-dotenv==1.4.2
 django-storages==1.12.3
+djangorestframework==3.13.1
 jmespath==0.10.0
 Pillow==8.4.0
 psycopg2==2.9.2
 python-dateutil==2.8.2
+pytz==2021.3
 s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.2
