added cors for api

--- a/animeflix/requirements.txt
+++ b/animeflix/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 boto3==1.20.26
 botocore==1.23.26
 Django==4.0
+django-cors-headers==3.13.0
 django-dotenv==1.4.2
 django-storages==1.12.3
 djangorestframework==3.13.1
